added intro pages, changed layout, added routing

--- a/tc-rannstein-app/src/App.css
+++ b/tc-rannstein-app/src/App.css
@@ -8,6 +8,11 @@
   pointer-events: none;
 }
 
+.intropageimages {
+  height: 125px;
+  align-self: center;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
