--- a/tc-rannstein-app/src/App.css
+++ b/tc-rannstein-app/src/App.css
@@ -7,6 +7,11 @@
   align-self: center;
 }
 
+.introimage {
+  width: 75%;
+  align-self: center;
+}
+
 .communityfriendimage {
   width: 100%;
   height: 100%;
