changed bot heights to be flex

--- a/tc-rannstein-app/src/App.css
+++ b/tc-rannstein-app/src/App.css
@@ -50,3 +50,15 @@
 .buttonPadding {
   padding: 8px;
 }
+
+/* General Layout */
+
+#root {
+  height: 100vh;
+}
+
+.chatbotContainer {
+  height: 100%
+}
+
+
